Change help txt

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 
             show.innerText = input.value;
             if (input.value < findMe) {
-                output.innerText = "You feel like you can ask for more";
+                output.innerText = "The number is smaller";
 
             } else if (input.value > findMe) {
-                output.innerText = "You feel like you are asking for too much";
+                output.innerText = "The number is bigger";
             } else {
                 output.innerText = "YOU SUCCEED!";
                 newFindMe();
